fixed spacing on expanded view

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -36,7 +36,7 @@ h2 {
 }
 
 h3 {
-    margin: 0 0 .2em;
+    margin: 0 0 .5em;
     color: #777;
     font-size: 1.33333em;
 }
